--- a/_config.yml
+++ b/_config.yml
@@ -278,3 +278,7 @@ defaults:
           comments: # true
           share: true
           related: true
+
+dark_theme_toggle: true # 다크 모드 토글 기능 추가
+after_footer_scripts:
+    - /assets/js/custom/dark-theme.js
